--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical"
 
         >
@@ -16,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:scaleType="fitXY"
-            android:src="@mipmap/sushi_rolls_with_wooden_chopsticks__svetlana_foote" />
+            android:src="@drawable/sushi_rolls_with_wooden_chopsticks_on_white_background" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -29,71 +31,110 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginBottom="5dp"
             android:layout_marginTop="50dp"
             android:layout_marginEnd="20dp"
-            android:drawableStart="@drawable/sharp_person_24" />
+            android:layout_marginBottom="5dp"
+            android:drawableStart="@drawable/sharp_person_24"
+            android:hint="@string/user_name" />
+
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            android:drawableStart="@drawable/baseline_lock_24"
 
-            android:drawableStart="@drawable/baseline_lock_24" />
+            android:hint="@string/password" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/forgetpassword"
-            android:layout_marginStart="270dp"
-            />
+            android:layout_marginStart="200dp"
+            android:text="@string/forgetpassword" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/bt_signIN"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginStart="90dp"
-            android:backgroundTint="@color/main"
-            android:text="@string/sign_in_button"
-            />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:orientation="horizontal"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bt_signIN"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:backgroundTint="@color/main"
+                android:padding="15dp"
+                android:text="@string/sign_in_button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:paddingTop="@dimen/nav_header_vertical_spacing"
+                android:text=""
+                android:background="@color/black"
+
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/bt_signIN" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:id="@+id/linear_im_social"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="3dp"
+            android:orientation="horizontal">
+
             <ImageView
-                android:layout_marginTop="20dp"
-                android:layout_marginStart="100dp"
-                android:layout_width="100dp"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:src="@mipmap/google"/>
-            <ImageView
-                android:layout_marginTop="20dp"
                 android:layout_marginStart="20dp"
-                android:layout_width="100dp"
+                android:layout_weight="1"
+                />
+
+            <ImageView
+                android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:src="@mipmap/facebook"/>
+                android:layout_weight="1"
+                android:src="@drawable/google" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:layout_weight="1"
+                android:src="@drawable/facebook" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:layout_weight="1"
+                />
         </LinearLayout>
-<LinearLayout
-    android:layout_width="match_parent"
-    android:orientation="horizontal"
-    android:layout_height="wrap_content">
-    <TextView
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="100dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/don_t_have_an_account"
-        />
-    <TextView
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Register"
-        />
-</LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="100dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/don_t_have_an_account" />
+
+            <TextView
+                android:id="@+id/tv_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/Register" />
+        </LinearLayout>
 
 
     </LinearLayout>
