--- a/app/src/main/res/layout/start_screen.xml
+++ b/app/src/main/res/layout/start_screen.xml
@@ -2,73 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    >
-
-    <ImageView
-        android:id="@+id/im_header"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:scaleType="fitXY"
-        android:src="@mipmap/hedear"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/im_header2"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@mipmap/layer_2"
-        app:layout_constraintBottom_toBottomOf="@+id/im_header"
-        app:layout_constraintEnd_toEndOf="@+id/im_header"
-        app:layout_constraintStart_toStartOf="@+id/im_header"
-        app:layout_constraintTop_toTopOf="@+id/im_header" />
-
-    <ImageView
-        android:id="@+id/im_center"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@mipmap/sushi"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/im_header2" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/bt_signIN"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:backgroundTint="@color/main"
-        android:text="@string/sign_in_now"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/im_center"
-
-        />
-
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="@string/register"
-        android:textColor="@color/main"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bt_signIN"
-
-        />
-<!--    android:backgroundTint="@drawable/my_button"-->
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="@string/terms_and_conditions"/>
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:showIn="@layout/start_screen">
+<androidx.fragment.app.FragmentContainerView
+    android:id="@+id/fragment_container_view_start"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:name="androidx.navigation.fragment.NavHostFragment"
+    app:navGraph="@navigation/auth_navigation"
+    app:defaultNavHost="true"
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
