--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,11 +9,11 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_order"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/order" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_menu"
             android:icon="@mipmap/sushi_icon_png"
             android:title="@string/menu" />
         <item
@@ -37,17 +37,17 @@
         <item android:title="">
             <menu>
                 <item
-                    android:id="@+id/nav_home1"
+                    android:id="@+id/nav_about"
                     android:icon="@drawable/ic_menu_camera"
                     android:title="@string/aboutus" />
                 <item
-                    android:id="@+id/nav_gallery2"
+                    android:id="@+id/nav_contactus"
                     android:icon="@drawable/ic_menu_gallery"
-                    android:title="@string/order" />
+                    android:title="@string/contactus" />
                 <item
-                    android:id="@+id/nav_slideshow3"
+                    android:id="@+id/nav_TermsandConditions"
                     android:icon="@mipmap/terms"
-                    android:title="@string/menu" />
+                    android:title="@string/TermsandConditions" />
             </menu>
         </item>
 
