--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,128 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".RegisterFragment">
+    tools:context=".auth.RegisterFragment">
 
     <LinearLayout
-        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:orientation="vertical"
 
         >
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/selective_color_1" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/selective_color_1" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/register"
-        android:textColor="#322e2b"
-        android:textSize="55.5sp" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/register"
+            android:textColor="@color/textcolor"
+            android:textSize="40.5sp" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="5dp"
-        android:hint="@string/user_name"
-        android:drawablePadding="7dp"
-        android:paddingStart="5dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:drawableStart="@drawable/sharp_person_24" />
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginBottom="5dp"
-            android:layout_marginEnd="20dp"
+            android:drawableStart="@drawable/sharp_person_24"
             android:drawablePadding="7dp"
-            android:paddingStart="5dp"
-            android:hint="@string/e_mail"
-            android:drawableStart="@drawable/baseline_attach_email_24" />
+            android:hint="@string/user_name"
+            android:paddingStart="5dp" />
+
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
+            android:layout_marginBottom="5dp"
+            android:drawableStart="@drawable/baseline_attach_email_24"
+            android:drawablePadding="7dp"
+            android:hint="@string/e_mail"
+            android:paddingStart="5dp" />
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:drawableStart="@drawable/baseline_lock_24"
             android:drawablePadding="7dp"
             android:hint="@string/password"
-            android:paddingStart="5dp"
-            android:drawableStart="@drawable/baseline_lock_24" />
-    <com.google.android.material.textfield.TextInputEditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:hint="Phone Number "
-        android:layout_marginEnd="20dp"
-        android:drawablePadding="7dp"
-        android:paddingStart="5dp"
-        android:drawableStart="@drawable/baseline_local_phone_24" />
+            android:paddingStart="5dp" />
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_marginTop="10dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <com.google.android.material.button.MaterialButton
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/bt_register"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        android:backgroundTint="@color/main"
-        android:text="@string/register"
-        />
-    <LinearLayout
-        app:layout_constraintTop_toBottomOf="@+id/bt_register"
-        app:layout_constraintStart_toStartOf="@+id/bt_register"
-        app:layout_constraintEnd_toEndOf="@+id/bt_register"
-        android:padding="5dp"
-        android:layout_width="wrap_content"
-        android:orientation="horizontal"
-        android:layout_height="60dp">
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:src="@drawable/google"/>
-        <ImageView
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-            android:src="@drawable/facebook"/>
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_marginEnd="20dp"
+            android:drawableStart="@drawable/baseline_local_phone_24"
+            android:drawablePadding="7dp"
+            android:hint="Phone Number "
+            android:paddingStart="5dp" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/bt_register"
+                android:layout_width="250dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/main_custom_button"
+                android:padding="10dp"
+                android:text="@string/register"
+                app:backgroundTint="@null"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <View
+                android:id="@+id/view_line"
+                android:layout_width="0dp"
+                android:layout_height="2dp"
+
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:background="@color/main"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                app:layout_constraintEnd_toEndOf="@+id/bt_register"
+                app:layout_constraintStart_toStartOf="@+id/bt_register"
+                app:layout_constraintTop_toBottomOf="@+id/bt_register" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:orientation="horizontal"
+                android:padding="5dp"
+                app:layout_constraintEnd_toEndOf="@+id/bt_register"
+                app:layout_constraintStart_toStartOf="@+id/bt_register"
+                app:layout_constraintTop_toBottomOf="@+id/view_line">
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/google" />
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="20dp"
+                    android:src="@drawable/facebook" />
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
             <TextView
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="100dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/Alreadyhaveanaccoun"
-                />
+                android:layout_marginStart="100dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/Alreadyhaveanaccoun" />
+
             <TextView
                 android:id="@+id/tv_signIn"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="4dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/sign_in"
-                />
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="10dp"
+                android:text="@string/sign_in" />
         </LinearLayout>
     </LinearLayout>
 
