--- a/app/src/main/res/layout/fragment_categories_.xml
+++ b/app/src/main/res/layout/fragment_categories_.xml
@@ -4,19 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Categories_Fragment">
+    tools:context=".category.Categories_Fragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/im_header_category_order"
+        <androidx.recyclerview.widget.RecyclerView
+            app:layout_constraintTop_toTopOf="parent"
+            android:background="@color/white"
+            android:id="@+id/recycler_category"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:src="@mipmap/layer_2_copy_3"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="wrap_content"
+
+            tools:listitem="@layout/item_categories_of_order" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
