--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".StartFragment">
+    tools:context=".auth.StartFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:background="@color/white"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
 
         <ImageView
@@ -28,8 +28,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/im_header"
             app:layout_constraintEnd_toEndOf="@+id/im_header"
             app:layout_constraintStart_toStartOf="@+id/im_header"
-            app:layout_constraintTop_toTopOf="@+id/im_header"
-            />
+            app:layout_constraintTop_toTopOf="@+id/im_header" />
 
         <ImageView
             android:id="@+id/im_center"
@@ -43,10 +42,11 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/bt_signIN"
+            android:background="@drawable/main_custom_button"
+            app:backgroundTint="@null"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:backgroundTint="@color/main"
             android:text="@string/sign_in_now"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -59,8 +59,9 @@
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:background="@drawable/border_item"
+            app:backgroundTint="@null"
             android:text="@string/register"
-            style="@style/MaterialAlertDialog.Material3"
             android:textColor="@color/main"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -72,11 +73,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="10dp"
+            android:text="@string/terms_and_conditions"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:text="@string/terms_and_conditions"/>
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
