--- a/app/src/main/res/layout/item_categories_of_order.xml
+++ b/app/src/main/res/layout/item_categories_of_order.xml
@@ -3,26 +3,26 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="40dp"
-    android:layout_margin="50dp"
+    android:layout_marginStart="40dp"
+    android:layout_marginEnd="40dp"
     android:outlineAmbientShadowColor="@color/main"
-android:padding="20dp"
+    android:layout_marginBottom="20dp"
     android:layout_height="wrap_content">
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-<androidx.cardview.widget.CardView
-    android:id="@+id/im_item_categories"
-app:cardCornerRadius="20dp"
-    android:layout_width="75dp"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    android:layout_height="75dp">
-    <ImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        app:civ_border_width="2dp"
+        app:civ_border_color="@color/white"
+        android:id="@+id/im_item_categories"
         android:src="@mipmap/layer_5"
         />
-</androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/tx_title"
@@ -39,7 +39,7 @@ app:cardCornerRadius="20dp"
             android:id="@+id/tx_descriptions"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-
+app:layout_constraintTop_toBottomOf="@+id/tx_title"
             app:layout_constraintBottom_toBottomOf="@+id/im_item_categories"
             app:layout_constraintStart_toEndOf="@+id/im_item_categories"
             android:paddingTop="5dp"
@@ -48,7 +48,9 @@ app:cardCornerRadius="20dp"
             android:lines="2"
             android:text="Categories decriptions to put here to represent the info on items1"
             />
+
         <ImageView
+            android:id="@+id/im_arr"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@mipmap/click_next"
@@ -56,7 +58,6 @@ app:cardCornerRadius="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
