--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,22 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+    <style name="second_custom_button">
+        <item name="round">20dp</item>
+        <item name="lineHeight">2dp</item>
+        <item name="borderRound">2dp</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/main_custom_button</item>
+
+    </style>
+    <style name="main_custom_button">
+        <item name="round">20dp</item>
+        <item name="lineHeight">2dp</item>
+        <item name="borderRound">2dp</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/main_custom_button</item>
+
+    </style>
 </resources>
