--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,35 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="item_category">
+        <item name="borderlessButtonStyle">@color/main</item>
+        <item name="cornerRadius">30dp</item>
+        <item name="android:shadowColor">@color/black</item>
+        <item name="addElevationShadow">true</item>
+        <item name="android:lines">@integer/material_motion_duration_medium_1</item>
+    </style>
+
     <style name="Theme.SushiRestaurant.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.SushiRestaurant.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="second_custom_button">
+        <item name="round">20dp</item>
+        <item name="lineHeight">2dp</item>
+        <item name="borderRound">2dp</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/main_custom_button</item>
+
+    </style>
+    <style name="main_custom_button">
+        <item name="round">20dp</item>
+        <item name="lineHeight">2dp</item>
+        <item name="borderRound">2dp</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/main_custom_button</item>
+
+    </style>
+
 </resources>
