--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -1,19 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".order.FavoritesFragment">
 
-<ImageView
-    app:layout_constraintTop_toTopOf="parent"
-    android:id="@+id/im_fav_header"
-    android:layout_width="match_parent"
-    android:layout_height="180dp"
-    android:src="@drawable/im_fav"
-    android:scaleType="fitXY"
-    />
+    <ImageView
+        android:id="@+id/im_fav_header"
+        android:layout_width="match_parent"
+        android:layout_height="190dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/im_fav"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        app:endIconDrawable="@drawable/heart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/favorites"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_fav"
@@ -24,15 +41,14 @@
         tools:listitem="@layout/item_favorite" />
 
     <com.google.android.material.button.MaterialButton
-    app:layout_constraintBottom_toBottomOf="parent"
-    android:layout_marginEnd="40dp"
-    android:background="@drawable/custom_button_white"
-    app:backgroundTint="@null"
-    android:textColor="@color/main"
-    android:layout_marginStart="40dp"
-    android:layout_marginBottom="40dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/add_more"
-    />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/custom_button_white"
+        android:text="@string/add_more"
+        android:textColor="@color/main"
+        app:backgroundTint="@null"
+        app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
