--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -14,6 +14,7 @@
             android:id="@+id/im_order_header"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:layout_marginTop="-10dp"
             android:src="@drawable/imge_inside_order"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
