--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -2,82 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_marginBottom="10dp"
+    android:layout_margin="20sp"
+
     android:layout_height="wrap_content">
 
-<!--    <de.hdodenhof.circleimageview.CircleImageView-->
-<!--        android:id="@+id/im_circ"-->
-<!--        android:layout_width="100dp"-->
-<!--        android:layout_height="100dp"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:scaleType="fitXY"-->
-<!--        android:src="@drawable/t"-->
-<!--        app:fabSize="normal"-->
-<!--        app:layout_constraintBottom_toBottomOf="@+id/card_item_fav"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/card_item_fav"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/card_item_fav"-->
-<!--        app:layout_constraintTop_toTopOf="@+id/card_item_fav" />-->
 
 
-    <!--    <FrameLayout-->
-    <!--        android:layout_width="100dp"-->
-    <!--        android:layout_height="100dp"-->
-    <!--        app:layout_constraintTop_toTopOf="@+id/card_item_fav"-->
-    <!--        app:layout_constraintStart_toStartOf="@+id/card_item_fav"-->
-    <!--        app:layout_constraintEnd_toStartOf="@+id/card_item_fav"-->
-    <!--        app:layout_constraintBottom_toBottomOf="@+id/card_item_fav"-->
-    <!--        android:layout_marginEnd="-20dp">-->
-    <!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-    <!--            android:id="@+id/fab"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="match_parent"-->
-    <!--            android:layout_gravity="center"-->
-    <!--            android:backgroundTint="@android:color/transparent" />-->
-
-    <!--        &lt;!&ndash; ImageView for the image inside the FAB &ndash;&gt;-->
-    <!--        <de.hdodenhof.circleimageview.CircleImageView-->
-    <!--            android:id="@+id/im_fav"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="match_parent"-->
-    <!--            android:src="@drawable/t"-->
-    <!--            android:scaleType="fitXY"-->
-    <!--            android:layout_gravity="center" />-->
-    <!--    </FrameLayout>-->
 
 
-<!--    <de.hdodenhof.circleimageview.CircleImageView-->
-<!--        android:id="@+id/fab_myfav"-->
-<!--        android:layout_width="40dp"-->
-<!--        android:layout_height="40dp"-->
-<!--        android:layout_gravity="center"-->
-<!--        android:background="@color/main"-->
-<!--        android:layout_marginStart="-3dp"-->
-<!--        app:layout_constraintBottom_toBottomOf="@+id/card_item_fav"-->
-<!--        app:layout_constraintStart_toEndOf="@+id/card_item_fav"-->
-<!--        app:layout_constraintTop_toTopOf="@+id/card_item_fav"-->
-<!--        app:layout_constraintCircleRadius="50dp"-->
-<!--        app:circularflow_defaultRadius="20dp"-->
-<!--        android:padding="7dp"-->
-<!--        android:src="@drawable/heart3"-->
-<!--      />-->
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_myHeart"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="-10dp"
-        android:backgroundTint="@color/main"
-        android:src="@drawable/heart3"
-        style="@style/main_custom_button"
-        app:layout_constraintBottom_toBottomOf="@+id/card_item_fav"
-        app:layout_constraintStart_toEndOf="@+id/card_item_fav"
-        app:layout_constraintTop_toTopOf="@+id/card_item_fav" />
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
+        android:background="@drawable/border_item"
         android:id="@+id/card_item_fav"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="100dp"
-        app:background="@drawable/custom_border_card_view"
+      android:orientation="horizontal"
         app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -104,30 +44,36 @@
                 android:id="@+id/tx_it_fav_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="29dp"
-                android:paddingStart="50dp"
+                android:layout_marginStart="20dp"
                 android:text="@string/item_1"
-                android:textSize="16dp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toEndOf="@id/im_item_item_categories"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:textSize="26dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tx_it_fav_descriptions"
-                android:layout_width="200dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="50dp"
                 android:lines="2"
-                android:paddingStart="30dp"
+                android:layout_marginTop="10dp"
+                android:paddingStart="10dp"
                 android:text="Categories decriptions to put here to represent the info on items1"
                 android:textSize="11dp"
                 android:textStyle="italic" />
         </LinearLayout>
 
 
-    </androidx.cardview.widget.CardView>
-
+    </LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_myHeart"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="-20dp"
+        android:backgroundTint="@color/white"
+        app:circularflow_radiusInDP="50dp"
+        android:src="@drawable/heart_solid_1_"
+        style="@style/main_custom_button"
+        app:layout_constraintBottom_toBottomOf="@+id/card_item_fav"
+        app:layout_constraintStart_toEndOf="@+id/card_item_fav"
+        app:layout_constraintTop_toTopOf="@+id/card_item_fav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
